# MVP_articles

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  README.md  README_QUICKSTART.md  SETUP_GUIDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: articles.py  auth.py  feed.py  preferences.py
backend/app/migrations/: import_articles.py
backend/app/models/: __init__.py  article.py  interaction.py  preference.py  user.py
backend/app/schemas/: user.py
backend/app/services/: recommender.py  recommender_cache.py  user_profile.py
data/: example_articles.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/Auth/: Login.jsx  Register.jsx
frontend/src/components/Feed/: ArticleCard.jsx  FeedList.jsx
frontend/src/components/Layout/: Header.jsx
frontend/src/components/Onboarding/: TopicSelector.jsx
frontend/src/components/Saved/: SavedArticles.jsx
frontend/src/services/: api.js
